--- a/android-prototype/app/src/main/AndroidManifest.xml
+++ b/android-prototype/app/src/main/AndroidManifest.xml
@@ -22,7 +22,11 @@
         <service
             android:name=".DataService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
+
+        <activity
+            android:name=".PreferencesActivity"
+            android:label="@string/action_settings" />
     </application>
 
 </manifest>
